--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-mirage": "0.2.0-beta.8",
+    "ember-cli-mirage": "0.2.0",
     "ember-cli-moment-shim": "1.1.0",
     "ember-cli-path-utils": "1.0.0",
     "ember-cli-postcss": "^2.1.1",
