--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "ember server",
     "test": "ember try:testall",
     "postinstall": "node ./bin/copy-directory.js node_modules/savvy-css/dist vendor/savvy/",
-    "build:prod": "ember build --environment=production"
+    "build:prod": "ember build --environment=production",
+    "serve:mirage": "export PORT=4900; ember serve"
+
   },
   "repository": "",
   "engines": {
@@ -34,6 +36,7 @@
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-deprecation-workflow": "0.2.3",
     "ember-cli-eslint": "1.6.0",
     "ember-cli-get-component-path-option": "1.0.0",
     "ember-cli-github-pages": "0.0.6",
@@ -44,12 +47,12 @@
     "ember-cli-moment-shim": "1.1.0",
     "ember-cli-path-utils": "1.0.0",
     "ember-cli-postcss": "^2.1.1",
-    "ember-cli-qunit": "^1.4.0",
+    "ember-cli-qunit": "2.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-string-utils": "1.0.0",
     "ember-cli-svgstore": "0.2.2",
     "ember-cli-test-info": "1.0.0",
-    "ember-cli-test-loader": "^1.1.0",
+    "ember-cli-test-loader": "1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-cli-valid-component-name": "1.0.0",
     "ember-composable-helpers": "0.26.2",
