--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "Faker": "~3.1.0",
     "remarkable": "^1.6.2",
     "highlightjs": "^9.2.0",
-    "axe-core": "^1.1.1",
+    "axe-core": "1.1.1",
     "sw-toolbox": "^3.2.1"
   }
 }
