--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chalk": "1.1.1",
     "css-mqpacker": "^4.0.0",
     "csswring": "^4.2.1",
+    "ember-a11y-testing": "0.1.3",
     "ember-ajax": "0.7.1",
     "ember-block-slots": "0.12.1",
     "ember-buffered-proxy": "0.5.1",
@@ -63,6 +64,7 @@
     "ember-devtools": "4.4.1",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.5",
+    "ember-get-config": "*",
     "ember-load-initializers": "^0.5.1",
     "ember-modal-dialog": "*",
     "ember-moment": "6.1.0",
